Get random data from randomuser.me using fetchAPI

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p class="subtitle is-size-6">Loads profile details of different users from an API.</p>
       </div>
     </div>
-    <hr class="">
+    <hr class="mt-1">
   </header>
 
   <main class="">
@@ -37,14 +37,14 @@
         <!-- User profile image -->
         <figure class="user-img image is-64x64">
           <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-          <figcaption class="is-size-7 has-text-centered">24 years</figcaption>
+          <figcaption class="age is-size-7 has-text-centered">24 years</figcaption>
         </figure>
         <!-- User name and email -->
-        <div class="name-email ml-2">
-          <p class="is-size-5">Mr. John Doe</p>
-          <p class="is-size-7">johndoe@mail.com</p>
-          <p class="is-size-6">011-962-7516</p>
-          <p class="is-size-7">street, city, state</p>
+        <div class="name-and-email ml-2">
+          <p class="name is-size-6">Mr. John Doe</p>
+          <p class="email is-size-7">johndoe@mail.com</p>
+          <p class="contact is-size-6">011-962-7516</p>
+          <p class="address is-size-7">street, city, state</p>
         </div>
       </div>
     </div>
